added bio and job and experience timeline

--- a/about.html
+++ b/about.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me | Liliana</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
         <nav>
@@ -21,14 +23,62 @@
         <section class="about-section">
             <h1>About Me</h1>
             <p>
-                Hi, I’m Liliana, an aspiring data analyst with a passion for data visualization. I enjoy transforming complex datasets into intuitive, insightful visuals that tell a story. Currently, I'm honing my skills in tools like Tableau, Power BI, and Python libraries.  
+                I'm a business development professional with over 7 years of experience in real estate, technology, and
+                data analytics. I love working alongside builders, developers, and brokers to optimize investment
+                strategies using housing data.
                 <br><br>
-                I believe visualization is key to making data accessible and impactful, and I’m excited to bring my creativity and analytical skills to meaningful projects.
+                My passion is bridging data and the future of homebuilding, helping developers and financial services
+                make informed decisions. I thrive on building strong relationships with industry leaders, combining my
+                drive, communication skills, and MBA knowledge to tackle challenges head-on. I'm always striving to grow
+                and deliver top results in everything I do.
             </p>
         </section>
     </main>
+    <section class="timeline">
+        <article class="event">
+            <header>
+                <h3>Data Visualization Consultant - Freelance</h3>
+                <time>2021 - Present</time>
+            </header>
+            <p>Focus on creating visualizations for data analytics projects.</p>
+        </article>
+        <article class="event">
+            <header>
+                <h3>Director of Digital Transformation - George Washington University</h3>
+                <time>2020 - 2021</time>
+            </header>
+            <p>Led digital initiatives to enhance user experience and workflow efficiency.</p>
+        </article>
+        <article class="event">
+            <header>
+                <h3>Senior Data Analyst - NPR</h3>
+                <time>2018 - 2020</time>
+            </header>
+            <p>Developed dashboards and analytics to guide decision-making.</p>
+        </article>
+        <article class="event">
+            <header>
+                <h3>Education</h3>
+            </header>
+            <ul>
+                <li>George Washington University: M.S. in Data Science (2020)</li>
+                <li>University of Virginia: B.A. in Statistics (2015)</li>
+            </ul>
+        </article>
+        <article class="event">
+            <header>
+                <h3>Certifications</h3>
+            </header>
+            <ul>
+                <li>Tableau Desktop Specialist (2020)</li>
+                <li>Google Data Analytics Professional Certificate (2021)</li>
+            </ul>
+        </article>
+    </section>
+
     <footer>
         <p>&copy; 2024 Liliana. All Rights Reserved.</p>
     </footer>
 </body>
+
 </html>
