--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="connect.html">Connect</a></li>
+                <li><a href="experience.html">Experience</a></li>
             </ul>
         </nav>
     </header>
@@ -34,48 +35,6 @@
             </p>
         </section>
     </main>
-    <section class="timeline">
-        <article class="event">
-            <header>
-                <h3>Data Visualization Consultant - Freelance</h3>
-                <time>2021 - Present</time>
-            </header>
-            <p>Focus on creating visualizations for data analytics projects.</p>
-        </article>
-        <article class="event">
-            <header>
-                <h3>Director of Digital Transformation - George Washington University</h3>
-                <time>2020 - 2021</time>
-            </header>
-            <p>Led digital initiatives to enhance user experience and workflow efficiency.</p>
-        </article>
-        <article class="event">
-            <header>
-                <h3>Senior Data Analyst - NPR</h3>
-                <time>2018 - 2020</time>
-            </header>
-            <p>Developed dashboards and analytics to guide decision-making.</p>
-        </article>
-        <article class="event">
-            <header>
-                <h3>Education</h3>
-            </header>
-            <ul>
-                <li>George Washington University: M.S. in Data Science (2020)</li>
-                <li>University of Virginia: B.A. in Statistics (2015)</li>
-            </ul>
-        </article>
-        <article class="event">
-            <header>
-                <h3>Certifications</h3>
-            </header>
-            <ul>
-                <li>Tableau Desktop Specialist (2020)</li>
-                <li>Google Data Analytics Professional Certificate (2021)</li>
-            </ul>
-        </article>
-    </section>
-
     <footer>
         <p>&copy; 2024 Liliana. All Rights Reserved.</p>
     </footer>
