--- a/connect.html
+++ b/connect.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="connect.html">Connect</a></li>
+                <li><a href="experience.html">Experience</a></li>
             </ul>
         </nav>
     </header>
