--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Me</a></li>
                 <li><a href="connect.html">Connect</a></li>
+                <li><a href="experience.html">Experience</a></li>
             </ul>
         </nav>
     </header>
     <main>
         <section class="hero">
+            <img class="flower" src="./photos/pexels-snsn-29403995.jpg">
             <h1>Welcome to My Portfolio</h1>
             <p>Aspiring Data Analyst | Visualization Enthusiast</p>
             <a href="about.html" class="cta">Learn More About Me</a>
